fix task search, fix truncate

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -351,6 +351,10 @@ a.project-name {
   color: var(--font-color-dark);
   font-weight: 700;
 }
+a.project-name,.project-description {
+  line-break: anywhere;
+  padding-right: 10px;
+}
 
 .edit-delete {
   display: flex;
@@ -385,7 +389,7 @@ a.project-name {
 }
 
 #input-search {
-  padding: 2px 0 2px 20px;
+  padding: 2px 35px 2px 20px;
   width: 100%;
 }
 
